--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -48,3 +48,15 @@
 .message-float-btn:hover {
   background: #0056b3;
 }
+
+.fashion-slider-img-container {
+  width: 457px;
+  height: 760px;
+  position: relative;
+  margin: 0 auto;
+}
+.fashion-slider-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
