--- a/public/assets/css/flaticon_shofy.css
+++ b/public/assets/css/flaticon_shofy.css
@@ -4,6 +4,7 @@
 url("../fonts/flaticon_shofy.woff?dee88fc45715450dd1106c3509e3ddac") format("woff"),
 url("../fonts/flaticon_shofy.woff2?dee88fc45715450dd1106c3509e3ddac") format("woff2"),
 url("../fonts/flaticon_shofy.eot?dee88fc45715450dd1106c3509e3ddac#iefix") format("embedded-opentype");
+    font-display: swap;
 }
 
 i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
