font issue solve

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,6 +4,25 @@
 @import 'node_modules/react-modal-video/scss/modal-video.scss';
 @import '../../public/assets/scss/main.scss';
 
+@font-face {
+  font-family: 'Jost';
+  src: url('/assets/fonts/Jost/Jost-VariableFont_wght.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Jost';
+  src: url('/assets/fonts/Jost/Jost-Italic-VariableFont_wght.ttf') format('truetype');
+  font-weight: 100 900;
+  font-style: italic;
+  font-display: swap;
+}
+
+body {
+  font-family: 'Jost', Arial, sans-serif;
+}
+
 // Floating WhatsApp and Chat Button Styles
 .whatsapp-float-btn {
   position: fixed;
