--- a/public/assets/scss/utils/_typography.scss
+++ b/public/assets/scss/utils/_typography.scss
@@ -1,7 +1,7 @@
 
 // font url
 
-$font-url: 'https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Jost:wght@300;400;500;600;700&family=Oregano&family=Roboto:wght@300;400;500;700;900&display=swap';
+// $font-url: 'https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Jost:wght@300;400;500;600;700&family=Oregano&family=Roboto:wght@300;400;500;700;900&display=swap';
 
 // font family
 $font-family: (
@@ -11,9 +11,7 @@ $font-family: (
         'p': "'Jost', sans-serif",
         'jost': "'Jost', sans-serif",
         'fontawesome': '"Font Awesome 6 Pro"',
-        'roboto': "'Roboto', sans-serif",
-        'oregano': "'Oregano', cursive",
-        'charm': "'Charm', cursive",
+        // Remove Roboto, Oregano, Charm unless self-hosted versions are added
     )
 );
 
